--- a/style2.css
+++ b/style2.css
@@ -71,6 +71,7 @@ body
 
 #titre_principale h1
 {
+	color: rgba(52, 43, 43, 0.775);
 	font-family: 'Ranchers', cursive;
 	font-size: 1.6em;
 	padding-top: 3px;
@@ -123,9 +124,8 @@ nav a
 	text-transform: uppercase;
 	font-size: 0.8em;
 	font-weight: bold;
-	border: 2px solid black;
+	border: 2px solid rgb(0, 0, 0);
 	border-radius: 2px;
-	height: 20px;
 }
 
 nav a:hover
@@ -141,9 +141,27 @@ nav a:active
 
 #baniere_img
 {
-	height: 200px;
+	height: 250px;
 	background: url('images/coronavirus.jpg');
 	margin-top: 10px;
+	position: relative;
+}
+
+#baniere_img p
+{
+	border: 1px solid black;
+	background-color: rgba(0, 0, 0, 0.469);
+	border-radius: 7px;
+	color: blanchedalmond;
+	font-size: 0.9em;
+	height: 35px;
+	bottom: -15px;
+	padding-left: 0.3px;
+	padding-bottom: 10px;
+	position: absolute;
+	text-align: center;
+	letter-spacing: 4px;
+	width: 99.5%;
 }
 
 section article
