--- a/style2.css
+++ b/style2.css
@@ -1,28 +1,3 @@
-
-@font-face
-{
-	font-family: 'BallparkWeiner';
-	src: url('polices/ballpark.eot');
-	src: url('polices/ballpark.eof?#iefix') format('embedded-opentype'),
-		 url('polices/ballpark.woff') format('woff'),
-		 url('polices/ballpark.ttf') format('truetype'),
-		 url('polices/ballpark.svg#BallparkWeiner') format('svg');
-	font-weight: normal;
-	font-style: normal;
-}
-
-@font-face
-{
-	font-family: 'Dayrom';
-	src: url('polices/dayrom.eot');
-	src: url('polices/dayrom.eot?#iefix') format('embedded-opentype'),
-		 url('polices/dayrom.woff') format('woff'),
-		 url('polices/dayrom.ttf') format(truetype),
-		 url('polices/dayrom.svg#BallparkWeiner') format('svg');
-	font-weight: normal;
-	font-style: normal;
-}
-
 body
 {
 	background: url('images/fond_jaune.png');
@@ -30,115 +5,114 @@ body
 	color: #181818;
 }
 
-#bloc_page
+#bloc-page
 {
-	width: 950px;
+	background-color: rgb(239, 239, 239);
+	border-radius: 10px; 
+	display: flex;
+	flex-direction: column;
+	width: 99.5%;
 	margin: auto;
-	border-radius: 10px;
-	background-color: rgb(239, 239, 239); 
 }
 
-#blog_page
+#blog
 {
-	padding-top: 20px;
-	padding-left: 10px;
 	height: 20px;
+	padding-left: 10px;
+	padding-top: 10px;
 }
 
-#blog_page a
+#blog a
 {
-	font-family: dayron, serif, Arial;
-	font-style: italic;
-	text-decoration: none;
-	font-size: 0.8em;
-	color: rgb(93, 93, 93);
-}
-
-#blog_page a:hover
-{
-	text-decoration: underline;
-	font-weight: normal;
+	color: rgba(0, 64, 255, 0.51);
+	font-size: 1em;
+	font-family: 'Courier New', Courier, monospace;
 	font-style: normal;
+	font-weight: bold;
+	text-decoration: none;
 }
 
-#titre_principale
+#title-main
 {
-	height: 75px;
-	background-color: rgb(63, 145, 145);
+	background-color: rgba(19, 103, 103, 0.714);
+	box-shadow: 5px 7px 9px rgba(0, 0, 0, 0.551);
+	border-radius: 5px;
+	height: 80px;
 	margin-top: 0px;
 	text-align: center;
 }
 
-#titre_principale h1
+#title-main h1
 {
-	color: rgba(52, 43, 43, 0.775);
+	color: white;
 	font-family: 'Ranchers', cursive;
-	font-size: 1.6em;
-	padding-top: 3px;
-	margin-left: 10px;
-	margin-right: 10px;
-	margin-bottom: 0px;
+	font-size: 2.2em;
+	letter-spacing: 2px;
 	text-transform: uppercase;
-	text-shadow: 5px 5px rgba(77, 77, 77, 0.592);
+	text-shadow: 5px 7px 9px rgba(0, 0, 0, 0.551);
+	margin-bottom: 0px;
 }
 
-#titre_principale h5
+#title-main p
 {
-	color: whitesmoke;
-	font-family: 'Oswald', sans-serif;
 	font-size: 1.5em;
+	font-family: 'Oswald', sans-serif;
 	font-style: italic;
-	margin-top: 2px;
-	margin-right: 100px;
-	padding-top: 0px;
-	padding-bottom: 7px;
-	padding-right: 0px;
-	text-align: right;
-	text-shadow: 5px 5px rgba(77, 77, 77, 0.748);
+	font-weight: bold;
+	letter-spacing: 3px;
+	margin-top: 0px;
+	text-shadow: 5px 4px 3px rgba(0, 0, 0, 0.551);
 }
 
 nav
 {
-	height: 30px;
+	height: auto;
 
 }
 
 nav ul
 {
-	list-style-type: none;
 	display: flex;
-	justify-content: space-between;
-	padding-top: 5px;
-	padding-left: 2px;
-
-}
-nav li
-{
-	width: auto;
+	font-size: 1em;
+	font-weight: bold;
+	justify-content: space-around;
+	list-style-type: none;
+	text-transform: uppercase;
 }
 
 nav a
 {
+	color: rgba(37, 72, 138, 0.789);
 	text-decoration: none;
-	color: rgb(111, 111, 255);
-	text-transform: uppercase;
-	font-size: 0.8em;
+}
+
+#banner-img
+{
+	box-shadow: 5px 3px 3px rgba(62, 62, 150, 0.537);
+	border-radius: 5px;
+	background: url('images/coronavirus.jpg');
+	height: 250px;
+	padding-left: 150px;
+	position: relative;
+}
+
+.message
+{
+	background-color: rgba(0, 0, 0, 0.489);
+	border: 1px solid rgba(0, 0, 0, 0.598);
+	border-radius: 7px 7px 0px 0px;
+	bottom: 0px;
+	color: blanchedalmond;
+	font-size: 1.5em;
 	font-weight: bold;
-	border: 2px solid rgb(0, 0, 0);
-	border-radius: 2px;
+	font-style: italic;
+	height: 40px;
+	letter-spacing: 3px;
+	margin-bottom: 0px;
+	padding-bottom: 0px;
+	position: absolute;
 }
-
-nav a:hover
-{
-	border-bottom: 2px solid rgb(98, 98, 255);
-	color: rgb(98,98, 255);
-}
-
-nav a:active
-{
-	color: rgb(0,204,0);
-}
-
+/*
 #baniere_img
 {
 	height: 250px;
@@ -426,4 +400,4 @@ footer p
 		margin-top: 0px;
 		padding-top: 0px;
 	}
-}
+}*/
