--- a/style2.css
+++ b/style2.css
@@ -46,7 +46,7 @@ body
 {
 	color: white;
 	font-family: 'Ranchers', cursive;
-	font-size: 2.2em;
+	font-size: 2em;
 	letter-spacing: 2px;
 	text-transform: uppercase;
 	text-shadow: 5px 7px 9px rgba(0, 0, 0, 0.551);
@@ -92,7 +92,7 @@ nav a
 	border-radius: 5px;
 	background: url('images/coronavirus.jpg');
 	height: 250px;
-	padding-left: 150px;
+	padding-left: 12%;
 	position: relative;
 }
 
@@ -105,7 +105,7 @@ nav a
 	color: blanchedalmond;
 	font-size: 1.3em;
 	font-style: italic;
-	height: 40px;
+	height: 16%px;
 	letter-spacing: 3px;
 	margin-bottom: 0px;
 	padding-left: 25px;
@@ -113,6 +113,16 @@ nav a
 	padding-right: 25px;
 	padding-bottom: 0px;
 	position: absolute;
+}
+
+.message strong
+{
+	background-color: rgba(255, 0, 0, 0.653);
+	border: 1px solid rgba(255, 0, 0, 0.653);
+	box-shadow: 3px 4px 3px rgba(0, 0, 0, 0.557);
+	border-radius: 3px;
+	font-weight: normal;
+	margin-bottom: 10px;
 }
 
 .content-main
@@ -123,7 +133,10 @@ nav a
 
 .info-main
 {
-	border: 1px solid rgba(73, 213, 213, 0.83);
+	background-color: rgba(0, 0, 0, 0.537);
+	border: 1px solid rgba(0, 0, 0, 0.537);
+	border-radius: 5px;
+	color: white;
 	font-family: 'Open Sans', sans-serif;
 	font-size: 1.3em;
 	margin-top: 40px;
@@ -134,7 +147,7 @@ nav a
 
 .info-main h3
 {
-	background-color:  rgba(73, 213, 213, 1);
+	background-color:  rgba(0, 0, 255, 0.585);
 	border: 1px solid rgba(73, 213, 213, 0.83);
 	border-radius: 5px;
 	color: rgba(255, 255, 255, 0.775);
@@ -148,32 +161,107 @@ nav a
 	text-transform: uppercase;
 	top: -25px;
 }
-/*
-#baniere_img
+
+.content-main article
 {
-	height: 250px;
-	background: url('images/coronavirus.jpg');
+	background-color: rgba(0, 0, 0, 0.537);
+	border: 1px solid rgba(0, 0, 0, 0.537);
+	border-radius: 5px;
+	box-shadow: 6px 6px 4px rgba(0, 0, 0, 0.36);
+	margin-left: 20px;
+	margin-top: 40px;
+	width: 28%;
+}
+
+.content-main article h3
+{
+	color: white;
+	font-style: italic;
+	font-weight: normal;
 	margin-top: 10px;
+	text-transform: uppercase;
+	text-align: center;
+}
+
+.logo
+{
+	display: flex;
+	justify-content: space-between;
+	margin-top: 35px;
+}
+
+.logo-siproimi
+{
+	border: 1px solid rgba(0, 0, 0, 0.619);
+	flex: 1;
+	margin-right: 10px;
 	position: relative;
 }
 
-#baniere_img p
+.logo-siproimi img
 {
-	border: 1px solid black;
-	background-color: rgba(0, 0, 0, 0.469);
-	border-radius: 7px;
-	color: blanchedalmond;
-	font-size: 0.9em;
-	height: 35px;
-	bottom: -15px;
-	padding-left: 0.3px;
-	padding-bottom: 10px;
 	position: absolute;
-	text-align: center;
-	letter-spacing: 4px;
-	width: 99.5%;
+	top: -25px;
 }
 
+.logo-unione
+{
+	border: 1px solid rgba(0, 0, 0, 0.619);
+	flex: 1;
+	margin-right: 10px;
+	position: relative;
+}
+
+.logo-unione img
+{
+	position: absolute;
+	top: -25px;
+}
+
+.logo-centofiori
+{
+	border: 1px solid rgba(0, 0, 0, 0.619);
+	flex: 1;
+	margin-right: 10px;
+	position: relative;
+}
+
+.logo-centofiori img
+{
+	position: absolute;
+	top: -25px;
+}
+
+.logo-millepiedi
+{
+	border: 1px solid rgba(0, 0, 0, 0.619);
+	flex: 1;
+	position: relative;
+}
+
+.logo-millepiedi img
+{
+	position: absolute;
+	top: -25px;
+}
+
+.info
+{
+	background-color: rgba(0, 0, 255, 0.428);
+	border: 1px solid rgba(0, 0, 255, 0.428);
+	border-radius: 3px;
+	box-shadow: 5px 5px 3px rgba(0, 0, 0, 0.612);
+	margin-bottom: 12px;
+	margin-left: 40%;
+}
+
+.info a
+{
+	color: white;
+	font-size: 0.7em;
+	text-decoration: none;
+}
+/*
 section article
 {
 	margin: 10px;
